2003-06-16  Rune Zedeler  <rz@daimi.au.dk>

	* input/mutopia/R.Schumann/romanze-op28-2.ly: Minor fixes.
	Reduce to 16pt.

2003-06-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/spacing-knee.ly: docstring

	* input/regression/spacing-multi-tuplet.ly (multipart): docstring

	* input/tutorial/{gallupi,minuet,sammartini,singing-saw}.ly
	input/tutorial/{test,solar,flowing}.ly: remove

	* input/rhythm.ly: remove

	* input/mutopia/F.Schubert/standchen.ly: update syntax.

	* input/mutopia/E.Satie/petite-ouverture-a-danser.ly (global):
	update syntax. 

	* scm/define-grobs.scm (all-grob-descriptions): set
	knee-spacing-correction to 1.0

	* lily/note-spacing.cc (stem_dir_correction): compute knee
	correction using stem-thickness and head width.

	* input/regression/beam-quanting-horizontal.ly: update texidoc

	* scm/define-grobs.scm (all-grob-descriptions): set
	beamed-extreme-minimum-free-lengths to 1.25 for 32nd beams.
	This fixes 32nd beams for noteheads in spaces quants.

	* scripts/lilypond-book.py (process_lilypond_blocks): opps.

2003-06-15  Heikki Junes  <hjunes@cc.hut.fi>

	* README.mandrake: Change lilypond-extras to lilypond-documentation.

2003-06-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/dpncnt.ly,part-combine-score.ly: remove.

	* VERSION (PACKAGE_NAME): release 1.7.21

	* input/regression/stem-shorten.ly: new file.

	* lily/stem.cc (get_default_stem_end_position): revise stem
	shortening code.

	* input/regression/spacing-multi-tuplet.ly: move from input/test/

	* input/test/{scripts,volta-start,sleur}.ly: remove
	
	* input/regression/span-bar.ly: smaller file.

	* input/regression/spacing-{natural,tight,loose}.ly: remove

	* input/test/markup.ly: remove

	* scripts/lilypond-book.py: put printfilename in separate chunk,
	so texidoc is printed after the filename.  

2003-06-12  Heikki Junes  <hjunes@cc.hut.fi>

	* make/lilypond.mandrake.spec.in: fix docdirs.

2003-06-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
