@@ -1,3 +1,11 @@
+2003-06-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/note-spacing.cc (get_spacing): include left part of right
+	object in fixed space. This fixes stretched space before
+	accidentals.
+
+	* input/regression/spacing-accidental-stretch.ly: new file.
+
 2003-06-16  Rune Zedeler  <rz@daimi.au.dk>
 
 	* input/mutopia/R.Schumann/romanze-op28-2.ly: Minor fixes.
